@startuml
title <b>conops_sm
[*] --> Safe
state Safe
state Idle
state Detumbling
state Payload

Safe --> Detumbling: <b>__periodic</b> [__auto]\n/ detumb_action
Safe --> Idle: <b>idle_flag_set</b> [__auto]\n/ idle_action
Idle --> Safe: <b>__periodic</b> [__auto]\n/ safe_action
Idle --> Payload: <b>payload_flag_set</b> [__auto]\n
Detumbling --> Safe: <b>__periodic</b> [__auto]\n/ safe_action
Payload --> Idle: <b>payload_flag_cleared</b> \n/ idle_action
Payload --> Safe: <b>__periodic</b> [__auto]\n/ safe_action
@enduml
